# materiais

./: .gitignore  LICENSE  README.md  pyproject.toml
cppapi/: BUILD  README.md  example.cpp  json.cpp  json.hpp  materiais.cpp  material.cpp  material.hpp  material_factory.cpp  material_factory.hpp  models.cpp  models.hpp  nuclear_data_manager.cpp  nuclear_data_manager.hpp
examples/: 09_corrections_validation.py  10_impurity_verification.py  README.md  ex_04_isotope_substitution.py  ex_05_impurities.py  ex_06_mcnp_output.py  ex_07_json_io.py  ex_08_tabn_verification.py  ex_09_custom_zircaloy.py  ex_10_pnnl_materials.py
examples/output/: reactor_cladding.json  reactor_coolant.json  reactor_fuel.json  reactor_structure.json  uo2.json  uo2_enriched.json
materials/: __init__.py  constants.py  factory.py  material.py  models.py  nuclear_data_manager.py  thermal.py
materials/libs/: __init__.py  beo.py  helium.py  lbe.py  lead.py  sodium.py  ss316.py  uo2.py  zircaloy4.py
materials/pnnl/: convert_pnnl.py  data
materials/pnnl/json/: 001_A_150_Tissue_Equivalent_Plastic__A150TEP.json  002_Acetone.json  003_Acetylene.json  004_Air__Dry__Near_Sea_Level.json  005_Alanine.json  006_Aluminum.json  007_Aluminum_Oxide.json  008_Aluminum__Alloy_2024_O.json  009_Aluminum__Alloy_2090_T83.json  010_Aluminum__Alloy_3003.json  (+362 more)
nuclear_data/: README.md  atomic_masses.json  natural_abundances.json  periodic_table.json  xs_substitutions.json
tutorial/: ex_01_basic_materials.py  ex_02_uo2_fuel.py  ex_03_reactor_materials.py  ex_06_mcnp_output.py  ex_10_pnnl_materials.py  tutorial.md
